--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -60,6 +60,15 @@ h6 {
   width: 100%;
   background-color: #ffffff;
   box-shadow: 0 6px 8px -6px rgba(15, 23, 42, 0.05), 0 8px 16px -6px rgba(15, 23, 42, 0.05);
+  animation: headerFade 0.3s linear;
+}
+@keyframes headerFade {
+  50% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
 
 .logo a {
@@ -297,4 +306,4 @@ h6 {
   line-height: 1;
   margin-bottom: 0;
   padding-bottom: 20px;
-}/*# sourceMappingURL=main.css.map */
+}
