--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -53,6 +53,14 @@ h6 {
 
 .header {
   transition: all ease 0.3s;
+  position: relative;
+  z-index: 111;
+}
+@media (max-width: 991px) {
+  .header {
+    padding: 20px 0;
+    border-bottom: 1px solid #eaeaea;
+  }
 }
 .header.sticky {
   position: sticky;
@@ -134,6 +142,26 @@ h6 {
   color: #000;
 }
 
+@media (max-width: 991px) {
+  .nav-content-right {
+    position: fixed;
+    width: 300px;
+    left: 0;
+    top: 0;
+    height: 100vh;
+    background-color: #fff;
+    flex-direction: column;
+    align-items: flex-start !important;
+    padding: 60px 40px;
+    box-shadow: 2px 0 25px rgba(0, 0, 0, 0.0705882353);
+  }
+  .nav-content-right .main-menu {
+    flex-direction: column;
+    padding: 0;
+    margin-bottom: 40px;
+  }
+}
+
 .language-select {
   position: relative;
 }
@@ -153,13 +181,30 @@ h6 {
 }
 
 .hero-section {
-  padding-top: 12px;
+  padding-top: 60px;
+  padding-bottom: 100px;
+}
+@media (max-width: 991px) {
+  .hero-section {
+    padding-bottom: 60px;
+  }
 }
 
 .hero-content__title {
   font-size: 62px;
   line-height: 1.13;
   margin-bottom: 35px;
+}
+@media (max-width: 991px) {
+  .hero-content__title {
+    font-size: 42px;
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 575px) {
+  .hero-content__title {
+    font-size: 36px;
+  }
 }
 .hero-content__pera {
   line-height: 1.8;
@@ -199,10 +244,38 @@ h6 {
   margin-top: 58px;
   max-width: 433px;
 }
+@media (max-width: 991px) {
+  .hero-btn-wrapper {
+    margin-top: 35px;
+  }
+}
+@media (max-width: 767px) {
+  .hero-btn-wrapper {
+    margin-inline: auto;
+  }
+}
+@media (max-width: 575px) {
+  .hero-btn-wrapper {
+    margin-top: 25px;
+  }
+}
 .hero-btn-wrapper .cmn--btn {
   padding: 13px 30px;
   display: block;
   box-shadow: 0px 5px 6px 0px rgba(0, 25, 253, 0.1490196078);
+}
+@media (max-width: 991px) {
+  .hero-btn-wrapper .cmn--btn {
+    padding: 10px 25px;
+    font-size: 20px;
+    display: inline-block;
+  }
+}
+@media (max-width: 575px) {
+  .hero-btn-wrapper .cmn--btn {
+    font-size: 18px;
+    padding: 10px 20px;
+  }
 }
 .hero-btn-wrapper .cmn--btn:first-child {
   margin-bottom: 13px;
@@ -225,9 +298,30 @@ h6 {
   line-height: 1.45;
 }
 
+@media (max-width: 991px) {
+  .build-logo-wrapper .single-logo-item img {
+    max-width: 130px;
+  }
+}
+
 .workflow-section {
-  padding-top: 139px;
+  padding-top: 140px;
   padding-bottom: 70px;
+}
+@media (max-width: 1199px) {
+  .workflow-section {
+    padding-top: 120px;
+  }
+}
+@media (max-width: 991px) {
+  .workflow-section {
+    padding-top: 100px;
+  }
+}
+@media (max-width: 991px) {
+  .workflow-section {
+    padding-top: 80px;
+  }
 }
 
 .workflow-title {
@@ -237,6 +331,23 @@ h6 {
   line-height: 1.33;
   margin-bottom: 110px;
 }
+@media (max-width: 1199px) {
+  .workflow-title {
+    margin-bottom: 80px;
+  }
+}
+@media (max-width: 991px) {
+  .workflow-title {
+    margin-bottom: 60px;
+    font-size: 28px;
+  }
+}
+@media (max-width: 575px) {
+  .workflow-title {
+    margin-bottom: 40px;
+    font-size: 28px;
+  }
+}
 
 .workflow-content-wrapper {
   padding-inline: 14px;
@@ -245,6 +356,21 @@ h6 {
 }
 .workflow-content-wrapper:not(:last-child) {
   padding-bottom: 100px;
+}
+@media (max-width: 991px) {
+  .workflow-content-wrapper:not(:last-child) {
+    padding-bottom: 80px;
+  }
+}
+@media (max-width: 991px) {
+  .workflow-content-wrapper:not(:last-child) {
+    padding-bottom: 65px;
+  }
+}
+@media (max-width: 991px) {
+  .workflow-content-wrapper > .row {
+    gap: 40px 0;
+  }
 }
 
 .workflow-thumb {
@@ -263,10 +389,20 @@ h6 {
   padding-left: 0;
   padding-right: 80px;
 }
+@media (max-width: 991px) {
+  .workflow-content-wrapper:nth-of-type(even) .workflow-content {
+    padding-right: 0;
+  }
+}
 
 .workflow-content {
   max-width: 560px;
   padding-left: 80px;
+}
+@media (max-width: 991px) {
+  .workflow-content {
+    padding-left: 0;
+  }
 }
 .workflow-content .title-info {
   font-size: 16px;
