--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -126,6 +126,12 @@ h6 {
 // header part start
 .header {
   transition: all ease .3s;
+  position: relative;
+  z-index: 111;
+  @include breakpoint(max-lg) {
+    padding: 20px 0;
+    border-bottom: 1px solid #eaeaea;
+  }
   &.sticky {
     position: sticky;
     top: 0;
@@ -206,6 +212,26 @@ h6 {
     }
   }
 }
+.nav-content-right {
+  @include breakpoint(max-lg) {
+    position: fixed;
+    width: 300px;
+    left: 0;
+    top: 0;
+    height: 100vh;
+    background-color: #fff;
+    flex-direction: column;
+    // justify-content: flex-start !important;
+    align-items: flex-start !important;
+    padding: 60px 40px;
+    box-shadow: 2px 0 25px #00000012;
+    .main-menu {
+      flex-direction: column;
+      padding: 0;
+      margin-bottom: 40px;
+    }
+  }
+}
 .language-select {
   position: relative;
   ul {
@@ -231,13 +257,24 @@ h6 {
 
 // hero section start
 .hero-section {
-  padding-top: 12px;
+  padding-top: 60px;
+  padding-bottom: 100px;
+  @include breakpoint(max-lg) {
+    padding-bottom: 60px;
+  }
 }
 .hero-content {
   &__title {
     font-size: 62px;
     line-height: 1.13;
     margin-bottom: 35px;
+    @include breakpoint(max-lg) {
+      font-size: 42px;
+      margin-bottom: 15px;
+    }
+    @include breakpoint(max-sm) {
+      font-size: 36px;
+    }
   }
   &__pera {
     line-height: 1.8;
@@ -280,10 +317,28 @@ h6 {
 .hero-btn-wrapper {
   margin-top: 58px;
   max-width: 433px;
+  @include breakpoint(max-lg) {
+    margin-top: 35px;
+  }
+  @include breakpoint(max-md) {
+    margin-inline: auto;
+  }
+  @include breakpoint(max-sm) {
+    margin-top: 25px;
+  }
   .cmn--btn {
     padding: 13px 30px;
     display: block;
     box-shadow: 0px 5px 6px 0px #0019FD26;
+    @include breakpoint(max-lg) {
+      padding: 10px 25px;
+      font-size: 20px;
+      display: inline-block;
+    }
+    @include breakpoint(max-sm) {
+      font-size: 18px;
+      padding: 10px 20px;
+    }
     &:first-child {
       margin-bottom: 13px;
     }
@@ -308,13 +363,31 @@ h6 {
   margin-bottom: 39px;
   line-height: 1.45;
 }
+.build-logo-wrapper {
+  .single-logo-item {
+    img {
+      @include breakpoint(max-lg) {
+        max-width: 130px;
+      }
+    }
+  }
+}
 // build software section end 
 
 
 // workflow section start
 .workflow-section {
-  padding-top: 139px;
+  padding-top: 140px;
   padding-bottom: 70px;
+  @include breakpoint(max-xl) {
+    padding-top: 120px;
+  }
+  @include breakpoint(max-lg) {
+    padding-top: 100px;
+  }
+  @include breakpoint(max-lg) {
+    padding-top: 80px;
+  }
 }
 .workflow-title {
   max-width: 700px;
@@ -322,6 +395,17 @@ h6 {
   font-size: 36px;
   line-height: 1.33;
   margin-bottom: 110px;
+  @include breakpoint(max-xl) {
+    margin-bottom: 80px;
+  }
+  @include breakpoint(max-lg) {
+    margin-bottom: 60px;
+    font-size: 28px;
+  }
+  @include breakpoint(max-sm) {
+    margin-bottom: 40px;
+    font-size: 28px;
+  }
 }
 .workflow-content-wrapper {
   padding-inline: 14px;
@@ -329,8 +413,18 @@ h6 {
   margin-inline: auto;
   &:not(:last-child) {
     padding-bottom: 100px;
+    @include breakpoint(max-lg) {
+      padding-bottom: 80px;
+    }
+    @include breakpoint(max-lg) {
+      padding-bottom: 65px;
+    }
   }
-
+  @include breakpoint(max-lg) {
+    > .row {
+      gap: 40px 0;
+    }
+  }
 }
 .workflow-thumb {
   border: 6px solid #BBD4F5;
@@ -347,12 +441,18 @@ h6 {
     .workflow-content {
       padding-left: 0;
       padding-right: 80px;
+      @include breakpoint(max-lg) {
+        padding-right: 0;
+      }
     }
   }
 }
 .workflow-content {
   max-width: 560px;
   padding-left: 80px;
+  @include breakpoint(max-lg) {
+    padding-left: 0;
+  }
   .title-info {
     font-size: 16px;
     font-weight: 400;
