--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -109,48 +109,29 @@ h6 {
   font-weight: 500;
 }
 
-.overlay {
-  position: fixed;
-  content: "";
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  transition: 0.3s;
-  &.active {
-    z-index: 9999;
-    background-color: rgba(59, 60, 74, 0.4);
-  }
-}
 // Base Css End
 
 // header part start
 .header {
+  width: 100%;
+  top: 0;
+  position: sticky;
   transition: all ease 0.3s;
-  position: relative;
+  background-color: #ffffff;
+  z-index: 11111;
   @include breakpoint(max-lg) {
     padding: 20px 0;
     border-bottom: 1px solid #eaeaea;
   }
   &.sticky {
-    position: sticky;
-    top: 0;
-    width: 100%;
-    background-color: #ffffff;
     box-shadow:
       0 6px 8px -6px rgba(15, 23, 42, 0.05),
       0 8px 16px -6px rgba(15, 23, 42, 0.05);
     z-index: 111111;
-    @include breakpoint(lg) {
-      animation: headerFade 0.3s linear;
-    }
   }
-  @keyframes headerFade {
-    50% {
-      transform: translateY(-100%);
-    }
-    100% {
-      transform: translateY(0);
+  @include breakpoint(max-xl) {
+    .container {
+      padding-inline: 24px;
     }
   }
 }
@@ -221,25 +202,58 @@ h6 {
     position: fixed;
     width: 100%;
     left: 0;
-    top: 0;
-    height: 100vh;
+    top: 76px;
+    height: calc(100vh - 75px);
     background-color: #fff;
     flex-direction: column;
     align-items: flex-start !important;
-    padding: 20px 30px;
-    box-shadow: 2px 0 25px #00000012;
-    transform: translateX(-100%);
-    transition: 0.4s linear;
+    padding: 0px 24px;
     overflow-y: auto;
-    z-index: 10000;
+    z-index: 100001;
+    transform: translateY(calc(-100% - 100px));
+    justify-content: flex-start !important;
+    align-items: center !important;
     &.active {
-      transform: translateX(0);
+      transform: translateY(-1px);
     }
     .main-menu {
       flex-direction: column;
       padding: 0;
-      margin-bottom: 60px;
-      margin-top: 40px;
+      margin-bottom: 30px;
+      margin-top: 10px;
+      gap: 0;
+      li {
+        &:not(:last-child) {
+          border-bottom: 1px solid #00000025;
+        }
+        a {
+         padding: 12px 8px; 
+        }
+      }
+    }
+    .lang-sign-wrapper {
+      flex-direction: column;
+      width: 100%;
+    }
+    .nav-btn-wrapper {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+      .try-btn {
+        text-align: center;
+      }
+      a {
+        width: 100%;
+        &:first-child {
+          padding-inline: 8px;
+        }
+      }
+    }
+    .language-select {
+      width: 100%;
+      padding: 10px 15px;
+      border: 1px solid #00000015;
     }
     .width-u-100 {
       width: 100%;
@@ -255,9 +269,24 @@ h6 {
     transition: all ease 0.3s;
     display: none;
     position: absolute;
+    background-color: white;
+    width: 100%;
+    left: 0;
+    top: 100%;
+    border: 1px solid #00000015;
+    padding: 10px 15px;
+    li {
+      font-size: 14px;
+      display: flex;
+      align-items: center;
+      gap: 4px;
+      padding: 5px 0;
+      font-weight: 500;
+    }
   }
   .control-lan {
     margin-right: 23px;
+    display: block;
   }
   .control-lan:focus {
     ul {
@@ -344,7 +373,7 @@ h6 {
   .cmn--btn {
     padding: 13px 30px;
     display: block;
-    box-shadow: 0px 5px 6px 0px #0019fd26;
+    box-shadow: 0px 5px 6px 0px #56597426;
     @include breakpoint(max-lg) {
       padding: 10px 25px;
       font-size: 20px;
@@ -484,12 +513,14 @@ h6 {
   padding: 0;
   max-width: 380px;
   li {
+    align-items: flex-start;
     line-height: 1.8;
     &:not(:last-child) {
       margin-bottom: 13px;
     }
     img {
       padding-right: 13px;
+      transform: translateY(6px);
     }
   }
   &.style-two {
@@ -497,11 +528,13 @@ h6 {
     flex-wrap: wrap;
     margin-top: 32px;
     li {
-      align-items: center;
       min-width: 180px;
-      line-height: 1;
+      line-height: 1.5;
       margin-bottom: 0;
       padding-bottom: 20px;
+      img {
+        transform: translateY(3px);
+      }
     }
   }
 }
