--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -275,6 +275,7 @@ h6 {
     top: 100%;
     border: 1px solid #00000015;
     padding: 10px 15px;
+    min-width: 80px;
     li {
       font-size: 14px;
       display: flex;
