--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,88 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap");
+  * {
+    @apply box-border;
+  }
+  body {
+    @apply font-light text-lg;
+    font-family: "Roboto", sans-serif;
+    color: #0f172a;
+    font-size: 16px;
+  }
+  span,
+  a,
+  sup,
+  sub {
+    @apply inline-block;
+  }
+  p:last-child {
+    @apply mb-0;
+  }
+  a {
+    @apply no-underline;
+  }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply font-medium m-0;
+    font-family: "Outfit", sans-serif;
+    color: #0f172a;
+  }
+  h2 {
+    @apply text-xl sm:text-2xl
+  }
+  .container {
+    @apply mx-auto px-5;
+  }
+  @media (min-width: 1400px) {
+    .container {
+      max-width: 1280px !important;
+    }
+  }
+}
+
+@layer components {
+  /* .btn {
+    font-family: "Roboto", sans-serif;
+    font-size: 24px;
+    font-weight: 500;
+    text-align: center;
+    border-radius: 8px;
+    transition: all ease 0.3s;
+  }
+  .btn.btn--base {
+    color: #fff;
+    background: #0019fd;
+    border: 2px solid #0019fd;
+  }
+  .btn.outline {
+    background-color: transparent;
+    color: #0019fd;
+  } */
+  .cmn--btn {
+    font-family: "Roboto", sans-serif;
+    font-size: 24px;
+    font-weight: 500;
+    text-align: center;
+    background: #0019fd;
+    color: #fff;
+    border-radius: 8px;
+    border: 2px solid #0019fd;
+    transition: all ease 0.3s;
+  }
+  .cmn--btn:hover, .cmn--btn.btn-outline {
+    background-color: transparent;
+    color: #0019fd;
+  }
+  .cmn--btn.btn-outline:hover {
+    background: #0019fd;
+    color: #fff;
+  }
+}
