--- a/src/input.css
+++ b/src/input.css
@@ -3,15 +3,12 @@
 @tailwind utilities;
 
 @layer base {
-  @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap");
-  * {
-    @apply box-border;
-  }
   body {
-    @apply font-light text-lg;
+    @apply font-light;
     font-family: "Roboto", sans-serif;
     color: #0f172a;
     font-size: 16px;
+    line-height: 1.55;
   }
   span,
   a,
@@ -34,9 +31,15 @@
     @apply font-medium m-0;
     font-family: "Outfit", sans-serif;
     color: #0f172a;
+    font-weight: 500;
+    line-height: 1.33;
+  }
+  h1 {
+    @apply text-2xl sm:text-3xl lg:text-4xl xxl:text-5xl;
+    line-height: 1.13;
   }
   h2 {
-    @apply text-xl sm:text-2xl
+    @apply text-xl sm:text-2xl;
   }
   .container {
     @apply mx-auto px-5;
@@ -46,12 +49,37 @@
       max-width: 1280px !important;
     }
   }
+
+  /* additional CSS Start */
+  .header {
+    z-index: 111111;
+    transition: .4s;
+  }
+  .header.active {
+    box-shadow: 0 6px 8px -6px rgba(15, 23, 42, 0.05), 0 8px 16px -6px rgba(15, 23, 42, 0.05);
+    z-index: 111111;
+  }
+  @media (max-width:991px) {
+    #responsiveHeader {
+      transform: translateX(-100%);
+    }
+    #responsiveHeader.active {
+      transform: translateX(0%);
+    }
+  }
+  .control-lan:hover ul,
+  .control-lan:focus ul {
+    display: block;
+  }
+  /* additional CSS End */
 }
 
 @layer components {
-  /* .btn {
+  .btn {
+    @apply px-4;
+    padding-top: 6px;
+    padding-bottom: 6px;
     font-family: "Roboto", sans-serif;
-    font-size: 24px;
     font-weight: 500;
     text-align: center;
     border-radius: 8px;
@@ -62,13 +90,25 @@
     background: #0019fd;
     border: 2px solid #0019fd;
   }
-  .btn.outline {
+  .btn.btn--base:hover {
+    color: #0019fd;
+    background: transparent;
+    border: 2px solid #0019fd;
+  }
+  .btn.btn.btn--base.btn--outline {
+    border: 2px solid #0019fd;
     background-color: transparent;
     color: #0019fd;
-  } */
+  }
+  .btn.btn.btn--base.btn--outline:hover {
+    color: #fff;
+    background-color: #0019fd;
+  }
   .cmn--btn {
+    @apply px-4;
+    padding-top: 6px;
+    padding-bottom: 6px;
     font-family: "Roboto", sans-serif;
-    font-size: 24px;
     font-weight: 500;
     text-align: center;
     background: #0019fd;
@@ -77,7 +117,8 @@
     border: 2px solid #0019fd;
     transition: all ease 0.3s;
   }
-  .cmn--btn:hover, .cmn--btn.btn-outline {
+  .cmn--btn:hover,
+  .cmn--btn.btn-outline {
     background-color: transparent;
     color: #0019fd;
   }
