--- a/src/input.css
+++ b/src/input.css
@@ -4,9 +4,8 @@
 
 @layer base {
   body {
-    @apply font-light;
+    @apply font-light text-title-default;
     font-family: "Roboto", sans-serif;
-    color: #0f172a;
     font-size: 16px;
     line-height: 1.55;
   }
@@ -28,10 +27,8 @@
   h4,
   h5,
   h6 {
-    @apply font-medium m-0;
+    @apply font-medium m-0 text-title-default;
     font-family: "Outfit", sans-serif;
-    color: #0f172a;
-    font-weight: 500;
     line-height: 1.33;
   }
   h1 {
@@ -72,34 +69,31 @@
   }
   .control-lan:hover ul,
   .control-lan:focus ul {
-    display: block;
+    @apply block;
   }
-  .faq-item .faq-content{
-    display: none;
+  .faq-item .faq-content {
+    @apply hidden;
   }
   .faq-item.open .faq-title img {
     transform: rotate(-180deg);
   }
   .faq-item:not(:last-child) {
-    border-bottom: 0
+    @apply border-b-0
   }
   /* additional CSS End */
 }
 
 @layer components {
   .btn {
-    @apply px-4;
+    @apply px-4 rounded-lg text-center font-medium;
     padding-top: 6px;
     padding-bottom: 6px;
     font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    text-align: center;
-    border-radius: 8px;
     transition: all ease 0.3s;
   }
   .btn--lg {
-    font-size: 22px;
-    padding: 13px 55px;
+    font-size: 18px;
+    padding: 13px 45px;
     @apply text-lg;
   }
   @media (max-width: 575px) {
@@ -108,43 +102,28 @@
       padding: 10px 25px;
     }
   }
-  .btn--dark.btn--outline {
-    color: #000;
-    background: transparent;
-    border: 1px solid #000;
+  @media (min-width: 1400px) {
+    .btn--lg {
+      font-size: 22px;
+      padding: 15px 64px;
+    }
   }
-  .btn--dark.btn--outline:hover {
-    color: #fff;
-    background: #000;
-    border: 1px solid #000;
+  .btn--dark.btn--outline {
+    @apply text-dark-default border border-border-dark;
+    background-color: transparent;
   }
   .btn--base {
-    color: #fff;
-    background: #0019fd;
-    border: 2px solid #0019fd;
+    @apply text-white-default bg-base-default border-2 border-border-base;
+    box-shadow: 0px 5px 6px 0px #0019fd26;
   }
   .btn--white {
-    color: #0019fd;
-    background: #fff;
-    border: 2px solid #0019fd;
+    @apply text-base-default bg-white-default border-2 border-border-base;
   }
-  .btn--white:hover {
-    color: #fff;
-    background: #0019fd;
-    border: 2px solid #0019fd;
-  }
-  .btn--base:hover {
-    color: #0019fd;
-    background: transparent;
-    border: 2px solid #0019fd;
-  }
-  .btn.btn--base.btn--outline {
-    border: 2px solid #0019fd;
+  .btn--base.btn--outline {
+    @apply border-2 border-border-base text-base-default;
     background-color: transparent;
-    color: #0019fd;
   }
-  .btn.btn--base.btn--outline:hover {
-    color: #fff;
-    background-color: #0019fd;
+  .btn:hover {
+    @apply border-border-baseDark bg-base-deep text-white-default;
   }
 }
