--- a/src/input.css
+++ b/src/input.css
@@ -36,7 +36,7 @@
     line-height: 1.13;
   }
   h2 {
-    @apply text-xl sm:text-2xl;
+    @apply text-xl sm:text-2xl md:text-3xl;
   }
   .container {
     @apply mx-auto px-5;
